#7 - Add more details in README.md file